--- a/start.html
+++ b/start.html
@@ -9,5 +9,10 @@
 <body>
     <h1>My start html page is not index html page.</h1>
     <img src="download.jpeg" alt="">
+
+    <summary>
+        <h2>New blog</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum corrupti eveniet neque quam iusto sapiente provident quod ex commodi libero. Officia voluptate quasi quo quam rerum labore itaque? Accusantium.</p>
+    </summary>
 </body>
 </html>
