--- a/start.html
+++ b/start.html
@@ -12,6 +12,7 @@
 
     <summary>
         <h2>New blog</h2>
+        <h3>Interesting blog written by me</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum corrupti eveniet neque quam iusto sapiente provident quod ex commodi libero. Officia voluptate quasi quo quam rerum labore itaque? Accusantium.</p>
     </summary>
 </body>
