--- a/start.html
+++ b/start.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>My start html page is not index html page.</h1>
+    <p>Ami vhorer hatchani, sesh bikaler pakhi. Chaya hoye thakbo sarakkon</p>
     <img src="download.jpeg" alt="">
 </body>
 </html>
